--- a/MyApplication/app/src/main/res/layout/activity_change_page.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_page.xml
@@ -126,15 +126,47 @@
 
     </GridLayout>
 
-    <Button
-        android:id="@+id/changepass"
-        android:layout_width="164dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/rounded_rectangle"
-        android:text="change password"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <!-- Choose Photo from Library Button -->
+        <Button
+            android:id="@+id/changepass"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_rectangle"
+            android:text="change password"
+            android:textColor="#000000"/>
+
+        <!-- Take a Photo Button -->
+        <Button
+            android:id="@+id/changephoto"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_rectangle"
+            android:text="Change Photos"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/goodbye"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_rectangle"
+            android:text="Account Information"
+            android:textColor="#000000" />
+    </LinearLayout>
+    
 
     <TextView
         android:layout_width="wrap_content"
