--- a/MyApplication/app/src/main/res/layout/activity_all_chats.xml
+++ b/MyApplication/app/src/main/res/layout/activity_all_chats.xml
@@ -51,4 +51,10 @@
             android:text="Chats" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/klavye"
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:text="Button" />
+
 </RelativeLayout>
