--- a/MyApplication/app/src/main/res/layout/activity_simplechat.xml
+++ b/MyApplication/app/src/main/res/layout/activity_simplechat.xml
@@ -52,18 +52,19 @@
         android:padding="16dp">
 
         <!-- Message Input Field -->
+
+        <!-- Send Button -->
         <EditText
             android:id="@+id/chat_message_input"
             android:layout_width="0dp"
-            android:minHeight="48dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Message"
             android:background="#FFFFFF"
-            android:padding="10dp"
-            android:inputType="textCapSentences|textMultiLine"/>
+            android:hint="Message"
+            android:inputType="textCapSentences|textMultiLine"
+            android:minHeight="48dp"
+            android:padding="10dp" />
 
-        <!-- Send Button -->
         <Button
             android:id="@+id/chat_send_button"
             android:layout_width="wrap_content"
