ui changes on feedback

--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -34,7 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="  Enter email"
+        android:hint="Enter Email"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:padding="8dp"
@@ -52,7 +52,7 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Enter a password:"
+        android:text="Enter a Password:"
         android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:gravity="start"
-        android:text="Enter your password again:"
+        android:text="Enter Your Password Again:"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/signup_rectangle"
-        android:hint="  Repeat password"
+        android:hint="Repeat Password"
         android:inputType="textPassword"
         android:maxLines="1"
         android:minHeight="48dp"
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
         android:background="@drawable/signup_rectangle"
-        android:hint="Enter password"
+        android:hint="Enter Password"
         android:lines="1"
         android:maxLines="1"
         android:minHeight="48dp"
