--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -6,59 +6,20 @@
     android:background="@drawable/gradient_background">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/logo_top_margin" />
-
-    <!-- Make sure the temp ImageView doesn't overlap with the first ImageView -->
-    <ImageView
         android:id="@+id/temp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_profile_placeholder"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/footer_layout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="@android:color/transparent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/bottom_nav_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <Button
-            android:id="@+id/button_profile"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/signup_rectangle"
-            android:layout_weight="1"
-            android:text="Profile" />
-
-        <Button
-            android:id="@+id/button_main"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/signup_rectangle"
-            android:layout_weight="1"
-            android:text="Main" />
-
-        <Button
-            android:id="@+id/button_chat"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/signup_rectangle"
-            android:layout_weight="1"
-            android:text="Chats" />
-    </LinearLayout>
-
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
