--- a/MyApplication/app/src/main/res/layout/activity_profiledetailtwo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetailtwo.xml
@@ -88,7 +88,7 @@
             android:layout_width="303dp"
             android:layout_height="48dp"
             android:layout_marginLeft="30dp"
-            android:background="#ffffff"
+            android:background="@drawable/rounded_spinner"
             android:entries="@array/height"
             app:layout_constraintEnd_toStartOf="@id/gap"
             app:layout_constraintStart_toStartOf="parent"
