--- a/MyApplication/app/src/main/res/layout/activity_change_password.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_password.xml
@@ -34,7 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="  Enter old password"
+        android:hint="Enter Old Password"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:padding="8dp"
@@ -67,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="  Enter new password"
+        android:hint="Enter New Password"
         android:inputType="textPassword"
         android:maxLines="1"
         android:padding="8dp"
@@ -99,7 +99,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="  Repeat password"
+        android:hint="Repeat Password"
         android:inputType="textPassword"
         android:maxLines="1"
         android:padding="8dp"
