--- a/MyApplication/app/src/main/res/layout/activity_starting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_starting.xml
@@ -13,13 +13,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/logo_top_margin" />
+        android:layout_marginTop="150dp" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/button_spacing2"
+        android:layout_marginTop="@dimen/button_spacing"
         android:background="@drawable/rounded_rectangle"
         android:text="LOG IN"
         android:textColor="#ffffff"
