--- a/MyApplication/app/src/main/res/layout/activity_all_chats.xml
+++ b/MyApplication/app/src/main/res/layout/activity_all_chats.xml
@@ -7,14 +7,16 @@
     tools:context=".AllChatsActivity">
 
     <!-- Chat list container -->
+
+    <!-- Footer with BottomNavigationView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_chats"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"
+        android:layout_marginBottom="4dp"
         tools:listitem="@layout/chat_item" />
 
-    <!-- Footer with BottomNavigationView -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
