--- a/MyApplication/app/src/main/res/layout/activity_change_photo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_photo.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Let's add some photos to your profile!"
+        android:text="You Can Add, Change or Remove Your Photos Here"
         android:layout_gravity="center_horizontal"/>
 
     <!-- Image placeholders -->
