--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:inputType="text|textNoSuggestions"
         android:maxLines="1"
         android:padding="8dp"
-        android:hint="  Enter username or email"
+        android:hint="Enter Email"
         android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -71,7 +71,7 @@
         android:inputType="textPassword"
         android:maxLines="1"
         android:padding="8dp"
-        android:hint="  Enter Password"
+        android:hint="Enter Password"
         android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
         android:textSize="16sp"
