--- a/MyApplication/app/src/main/res/layout/activity_preference_detailtwo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_preference_detailtwo.xml
@@ -41,17 +41,19 @@
     <!-- Height -->
 
 
-    <Spinner
-        android:id="@+id/editText1"
+    <TextView
+        android:id="@+id/textgender"
         android:layout_width="300dp"
         android:layout_height="48dp"
+        android:layout_centerInParent="true"
         android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_spinner"
-        android:entries="@array/gender"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.27"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/signup_rectangle"
+        android:hint="Select gender"
+        android:textColorHint="@color/black"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="@id/Gender"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/Gender"
         app:layout_constraintTop_toBottomOf="@id/Gender" />
 
     <TextView
@@ -67,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.041"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText1" />
+        app:layout_constraintTop_toBottomOf="@id/textgender" />
 
 
     <!-- Age window -->
@@ -123,19 +125,19 @@
         app:layout_constraintTop_toBottomOf="@id/linear"
         app:layout_constraintVertical_bias="0.01" />
 
-    <Spinner
-        android:id="@+id/editText3"
+    <TextView
+        android:id="@+id/textstar"
         android:layout_width="300dp"
         android:layout_height="48dp"
+        android:layout_centerInParent="true"
         android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_spinner"
-        android:entries="@array/star_signs"
-        android:hint="  Enter star sign"
-        android:textColor="#000000"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/Gender"
+        android:background="@drawable/signup_rectangle"
+        android:hint="Select Star Sign"
+        android:textColorHint="@color/black"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="@+id/star"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/Gender"
+        app:layout_constraintStart_toStartOf="@+id/star"
         app:layout_constraintTop_toBottomOf="@id/star" />
 
     <!-- Academic year -->
@@ -154,7 +156,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText3"
+        app:layout_constraintTop_toBottomOf="@id/textstar"
         app:layout_constraintVertical_bias="0.019" />
 
     <LinearLayout
@@ -200,7 +202,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="@dimen/element_spacing"
-        android:text="Academic Program"
+        android:text="Department"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -211,21 +213,17 @@
         app:layout_constraintTop_toBottomOf="@id/linear2"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
+    <Spinner
         android:id="@+id/editText5"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:layout_marginTop="@dimen/between_elements_spacing"
-        android:background="@drawable/signup_rectangle"
-        android:hint="  Enter study program"
-        android:inputType="text|textNoSuggestions"
-        android:lines="1"
-        android:maxLines="1"
-        android:textColor="#000000"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/Gender"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/Gender"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_spinner"
+        android:entries="@array/academic"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.27"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/year" />
 
     <TextView
@@ -254,6 +252,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="8dp"
         android:background="@drawable/signup_rectangle"
+        android:textColorHint="@color/black"
         android:hint="Select Language"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="@+id/Gender"
