--- a/MyApplication/app/src/main/res/layout/match_popup.xml
+++ b/MyApplication/app/src/main/res/layout/match_popup.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     android:padding="20dp">
 
     <LinearLayout
@@ -9,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical"
-        android:background="@drawable/gradient_background" 
+        android:background="@android:color/transparent"
         android:elevation="4dp">
 
         <TextView
